# videotranscode

./: CMakeLists.txt  README.md  ffheader.h  mediainfo.cpp  mediainfo.h  mediaoperate.cpp  mediaoperate.h
